完善站点装修功能。

--- a/src/main/resources/html/TZSitePageBundle/TzScriptsContent.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsContent.html
@@ -1,11 +1,11 @@
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/jquery/jquery.min.js"></script>
+	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/pic_list.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pic_list.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/content/init.js"></script>
+	src="%bind(:1)/statics/js/website/content/init.js"></script>
 <script type="text/javascript">
 	function tz_show_float_iframe_apply(displayURL) {
 		var cover = document.createElement("div");
