--- a/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 	//
-	var TzUniversityContextPath = "{ContextPath}";
+	var TzUniversityContextPath = "%bind(:1)";
 	//
-	var TZ_GD_LOGIN_SITEI_ORG_CODE = "{TZ_GD_LOGIN_SITEI_ORG_CODE}";
+	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
 </script>
