--- a/src/main/resources/html/TZSitePageBundle/TzScriptsContentMobile.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsContentMobile.html
@@ -1,5 +1,5 @@
-<script src="{ContextPath}/statics/js/lib/prefixfree/prefixfree.min.js" type="text/javascript"></script>
-<script src="{ContextPath}/statics/js/lib/zepto/zepto.js"></script>  
+<script src="%bind(:1)/statics/js/lib/prefixfree/prefixfree.min.js" type="text/javascript"></script>
+<script src="%bind(:1)/statics/js/lib/zepto/zepto.js"></script>  
 <script type="text/javascript">
 function changeW(){		
 	$('.bimg li').css('width',w);	
@@ -31,4 +31,4 @@ $('.bimg ul').bind('swipeRight',function(){
 	}
 });
 </script>
-<script src="{ContextPath}/statics/js/website/content/m/init.js"></script>
+<script src="%bind(:1)/statics/js/website/content/m/init.js"></script>
