--- a/src/main/resources/html/TZSitePageBundle/TzScriptsDownload.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsDownload.html
@@ -1,6 +1,6 @@
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/jquery/jquery.min.js"></script>
+	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/download/init.js"></script>
+	src="%bind(:1)/statics/js/website/download/init.js"></script>
