--- a/src/main/resources/html/TZSitePageBundle/TzScriptsLogin.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsLogin.html
@@ -1,28 +1,29 @@
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/gblconst.js"></script>
+	src="%bind(:1)/statics/js/website/gblconst.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/extjs/ext-all.js" symbol="backend"></script>
+	src="%bind(:1)/statics/js/lib/extjs/ext-all.js" symbol="backend"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/ueditor/ueditor.config.js"
+	src="%bind(:1)/statics/js/lib/ueditor/ueditor.config.js"
 	symbol="backend"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/ueditor/ueditor.all.min.js"
+	src="%bind(:1)/statics/js/lib/ueditor/ueditor.all.min.js"
 	symbol="backend"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/extjs/ux/ueditor.js" symbol="backend"></script>
+	src="%bind(:1)/statics/js/lib/extjs/ux/ueditor.js" symbol="backend"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/decoratedplugin.js"
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/decoratedplugin.js"
 	id="decoratedpluginjs"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/lib/jquery/jquery.min.js"></script>
+	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/extjs/app/view/website/set/js/backendcommon.js"
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/backendcommon.js"
 	symbol="backend"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/tranzvision/func/captcha.js"></script>
+	src="%bind(:1)/statics/js/tranzvision/func/captcha.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/commonfunc.js"></script>
+	src="%bind(:1)/statics/js/website/commonfunc.js"></script>
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/login/init.js"></script>
+	src="%bind(:1)/statics/js/website/login/init.js"></script>
+<!--#{javascripts}#-->
