--- a/src/main/resources/html/TZSitePageBundle/TzScriptsMenu.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsMenu.html
@@ -1,2 +1,2 @@
 <script type="text/javascript"
-	src="{ContextPath}/statics/js/website/menu/init.js"></script>
+	src="%bind(:1)/statics/js/website/menu/init.js"></script>
