--- a/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
@@ -3,4 +3,6 @@
 	var TzUniversityContextPath = "%bind(:1)";
 	//
 	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
+	//
+	var TZ_GD_LOGIN_SITEI_ID = "%bind(:3)";
 </script>
