--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_FIELD_HTML.html
@@ -1,7 +1,7 @@
 <div class="search_icodiv">
 <div class="main_full_line">
 	<div class="main_full_line_left">
-		<span class="reg_title_star">%bind(:1)</span>%bind(:2)：
+		<span class="reg_title_star">%bind(:1)</span>%bind(:2):
 	</div>
 	<div class="main_full_line_right">
       	<input name="%bind(:3)" type="text" class="input_351px" id="%bind(:3)" %bind(:4) value="%bind(:6)"/>
