--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_EN_HTML.html
@@ -43,7 +43,7 @@
 	  		<div class="main_full_lines"></div>
 			<div class="main_full_line" id="yzfsMobile" style="display:none">
 				<div class="main_full_line_left">
-					<span class="reg_title_star">*</span>Verification Code：
+					<span class="reg_title_star">*</span>Verification Code:
 				</div>
 				<div class="main_full_line_right">
 					<input name="yzm" type="text" class="input_351px" id="yzm" onblur="check_yzm(this.value)"/>
@@ -57,7 +57,7 @@
 			</div>
 			<div class="main_full_line" id="yzfsEmail">
 				<div class="main_full_line_left">
-					<span class="reg_title_star">*</span>Security Code：
+					<span class="reg_title_star">*</span>Security Code:
 				</div>
 				<div class="main_full_line_right">
 			    	<input name="yzmEmail" type="text" class="input_225px" id="yzmEmail"  onblur="check_yzmEmail(this.value)"/>
@@ -84,7 +84,7 @@
 <div class="pw-tip" id="J_PwdTip" style="display:none;position:absolute;">
 	<i class="pw-tip-arr"></i>
 	<div class="pw-tip-bd">
-		<div class="pw-strength"><span data-phase-id="r_ui_pwd_strength">Password Strength：</span>
+		<div class="pw-strength"><span data-phase-id="r_ui_pwd_strength">Password Strength:</span>
 			<div class="pw-strength-bar" style="left:115px">
 				<span class="pw-strength-1"></span>
 				<span class="pw-strength-2"></span>
