--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_FILD_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_FILD_HTML.html
@@ -1,5 +1,5 @@
 <div class="main_inner_right_line_50px">
-  	<div class="main_inner_right_line_left_user">%bind(:1)：</div>
+  	<div class="main_inner_right_line_left_user">%bind(:1):</div>
 	<div style="width:100%">
 		<label for="male"><input type="radio" name="%bind(:2)" class="radio_7" id="male" value="M" style="margin-left:7px;"/>男</label>
 	  	<label for="fmale"><input type="radio" name="%bind(:2)" class="radio_7" id="female" value="F" />女</label>
