完善站点装修。

--- a/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
+++ b/src/main/resources/html/TZSitePageBundle/TzScriptsGlobalVar.html
@@ -5,4 +5,6 @@
 	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
 	//
 	var TZ_GD_LOGIN_SITEI_ID = "%bind(:3)";
+	//
+	var TZ_GD_SITEI_ISD = "%bind(:4)";
 </script>
