--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_PANDUAN_LIULANQI_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_PANDUAN_LIULANQI_HTML.html
@@ -1,4 +1,7 @@
 <link rel="stylesheet" href="%bind(:1)/statics/css/website/chosen.css">
+<script type="text/javascript">
+	var TzUniversityContextPath = "%bind(:1)";
+</script>
 <script type="text/javascript" src="%bind(:1)/statics/js/tranzvision/util/checkExplorer.js" charset="utf-8"></script>
 
 
