--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_REALEAS_HEAD_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_REALEAS_HEAD_HTML.html
@@ -3,6 +3,9 @@
 <meta http-equiv="x-ua-compatible" content="IE=edge">
 <title></title>
 <link href="page_stylecss" rel="stylesheet" type="text/css" />
+<script type="text/javascript">
+	var TzUniversityContextPath = "%bind(:2)";
+</script>
 <script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>     
 <script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/util/layer.js"></script>
 <script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
