--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_REG_HTML.html
@@ -22,7 +22,7 @@
 	  		<div class="main_full_line">
 	    		<div class="main_full_line_title">用户注册</div>
 	    		<div class="main_full_full_right">
-					<a href="./login.html" class="blue_">
+					<a href="%bind(:6)" class="blue_">
 						&nbsp;&nbsp;&nbsp;返回
 					</a>
 				</div>
