--- a/src/main/resources/html/TZWebSelectorBundle/TZ_ENROLL_CITY4.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_ENROLL_CITY4.html
@@ -28,7 +28,7 @@
 	<body>
 		<div class="city_top2">
 			<div class="city_close" onclick="closeThis();">
-				<img src="%bind(:3)/statics/images/website/del.png" width="15" height="15" />
+				<img src="%bind(:4)/del.png" width="15" height="15" />
 				&nbsp;
 			</div>
 		</div>
@@ -37,6 +37,7 @@
 				%bind(:1)
 			</div>
 		</div>
+
 		<script language="javascript" type="text/javascript">
 			function changeCity2(city){
 				var pageid="%bind(:2)";
