--- a/src/main/resources/html/TZWebSelectorBundle/TZ_PROVINCE_SELECTOR_HTML.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_PROVINCE_SELECTOR_HTML.html
@@ -50,7 +50,7 @@
 	<body>
 		<div class="city_top">
 			<div class="city_close" onclick="closeThis();" style="margin-top: 3px;">
-				<img src="%bind(:3)/statics/images/website/del.png" width="15" height="15" />
+				<img src="%bind(:4)/del.png" width="15" height="15" />
 				&nbsp;
 			</div>
 		</div>
