--- a/src/main/resources/html/TZWebSelectorBundle/TZ_SCHOOL_SELECT.html
+++ b/src/main/resources/html/TZWebSelectorBundle/TZ_SCHOOL_SELECT.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
 <link href="%bind(:2)/statics/css/website/css.css" rel="stylesheet" type="text/css" />
+<script type="text/javascript">
+	var TzUniversityContextPath = "%bind(:2)";
+</script>
 
 <script type="text/javascript" src="%bind(:2)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="%bind(:2)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
@@ -327,7 +330,7 @@
 
 <body>
 <div class="city_top3">
-  <div class="city_close"  onclick="closeThis();"><img src="%bind(:2)/statics/images/website/del.png" width="15" height="15" /></div> 
+  <div class="city_close"  onclick="closeThis();"><img src="%bind(:3)/del.png" width="15" height="15" /></div> 
   选择学校
 </div>
 <div class="city_main2">
@@ -335,7 +338,7 @@
   <div class="search_left"><span class="font_gray_16px_s">搜索 </span>
     <input name="search-text" type="text" class="input_251px" id="search-text" /></div>
  <div class="search_right">
-	 <a href="#" id="search" class="alpha" onclick="findData();" > <img src="%bind(:2)/statics/css/website/images/search_bt.png" width="40" height="39"/></a></div>
+	 <a href="#" id="search" class="alpha" onclick="findData();" > <img src="%bind(:3)/search_bt.png" width="40" height="39"/></a></div>
  </div>
 <div class="city_main_title2"><span class="font_gray_16px_s">如果搜索不到相应学校，请点击其他学校或境外学校输入对应的学校</span></div>
   <div class="city_main_title3" id="tab1">
