--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_SETREGISTEPAGE_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_SETREGISTEPAGE_HTML.html
@@ -61,7 +61,7 @@
 
 <!-- top start -->
 <div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false"
-        area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id="29">
+        area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id="">
 
 </div>
 <!-- top end -->
@@ -69,7 +69,7 @@
 %bind(:1)
 
 <!-- foot start -->
-<div id="footarea" class="foot assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="F" area-type="YW" area-id="35">
+<div id="footarea" class="foot assdiv" area-add="false" area-edit="true" area-del="false" area-copy="false" area-moveup="false" area-movedown="false" area-postion="F" area-type="YW" area-id="">
 
         </div>
 
