唐敏敏20160122 注册预览和活动图片集修改

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_USER_REG_PREVIEW_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_USER_REG_PREVIEW_HTML.html
@@ -17,6 +17,7 @@
 
 	</head>
 		%bind(:1)
+		<input type="hidden" value="%bind(:3)" id="siteid" name="siteid"/>
 	<script type="text/javascript">
 
 	    var config = {
