--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP1_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP1_HTML.html
@@ -144,13 +144,13 @@
 <!-- content start -->
 <div id="main">
 	<form action="" method="post" enctype="multipart/form-data" name="forgetForm" id="forgetForm">
-		<div class="padding_div_40px2"></div>
-		<div class="padding_div_40px2"></div>
+		<div class="padding_div_40px"></div>
+		<div class="padding_div_40px"></div>
 		<div class="main_full_top"></div>
 		<div class="main_full">
 			<div class="main_full_line">
 		    	<div class="main_full_line_title_font_left">忘记密码 </div>
-		    	<div class="main_full_full_right"><a href="/%bind(:2)/login.html" class="blue_">&nbsp;&nbsp;&nbsp;返回</a></div>
+		    	<div class="main_full_full_right"><a href="%bind(:6)" class="blue_">&nbsp;&nbsp;&nbsp;返回</a></div>
 		  	</div>
 		  	<div class="main_full_lines_720px"></div>
 			<div id="content1">
