--- a/src/main/resources/html/TZSitePageBundle/SiteLoginReleaseTpl.html
+++ b/src/main/resources/html/TZSitePageBundle/SiteLoginReleaseTpl.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta charset="utf-8">
 <title></title>
 <link rel="stylesheet" type="text/css" href="{ContextPath}/statics/css/website/orgs/{page_stylecss}" />
 <!--#{javascripts}#-->
