--- a/src/main/resources/html/TZSitePageBundle/TzWinLocationAndOpenWin.html
+++ b/src/main/resources/html/TZSitePageBundle/TzWinLocationAndOpenWin.html
@@ -6,7 +6,7 @@ if(visitUrlType=="_self"){
 }else{
 	var newTab=window.open('about:blank');
 	try{
-		setTimeout(function(){newTab.location.href= visitUrl,100);
+		setTimeout(function(){newTab.location.href= visitUrl},100);
 	}catch(e){
 		Ext.Msg.alert("提示","您的浏览器阻止弹出窗口，请您允许本站点的弹窗！");
 	}	
