--- a/src/main/resources/html/TZSitePageBundle/SiteIndexReleaseTpl.html
+++ b/src/main/resources/html/TZSitePageBundle/SiteIndexReleaseTpl.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title></title>
-<link rel="stylesheet" type="text/css" href="{ContextPath}/statics/css/website/orgs/{page_stylecss}" />
+<link rel="stylesheet" type="text/css" href="page_stylecss" />
 <!--#{javascripts}#-->
 </head>
 %BIND(:1)
