--- a/src/main/resources/html/TZSitePageBundle/TzNoContent.html
+++ b/src/main/resources/html/TZSitePageBundle/TzNoContent.html
@@ -4,7 +4,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title></title>
-<link rel="stylesheet" type="text/css" href="{ContextPath}/statics/css/website/orgs/{page_stylecss}" />
+<link rel="stylesheet" type="text/css" href="page_stylecss" />
 <script type="text/javascript"
 	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript"
