--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -349,9 +349,9 @@
                     <img id="tempimg" dynsrc="" src="/" style="display:none" />
 					<!--form id="myupload" action="/ImaUploadServlet?sysfilename=" method="post" enctype="multipart/form-data"-->
 					<form id="myupload"
-						action="%bind(:20)/UpdServlet?filePath=zhglPhoto" method="post"
+						action="%bind(:20)/UpdWebServlet?filePath=zhglPhoto" method="post"
 						enctype="multipart/form-data">
-						<input class="fileupload2" type="file" name="orguploadfile" id="fileupload" style="position:absolute"/>
+						<input class="fileupload2" type="file" name="websitefile" id="fileupload" style="position:absolute"/>
 					</form>
 				</div>
 				<div class="main_inner_content_info_text2" id="pldiv">
