报名表前台

--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -490,6 +490,7 @@
 									layer.closeAll(); 
 								 	noteing(MsgSet.SUBMIT_SUCCEED);
 									SurveyBuild.saveTjx_fj();
+									appReadOnly = "Y";
 									pageReadOnly();
 									var isadmin = "%bind(:26)";
 									if(isadmin=="")
