--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
@@ -5,6 +5,7 @@
 <title>活动报名</title>
 <script type="text/javascript" src="/tranzvision/js/jquery.js"></script>
 <script type="text/javascript">
+	var TzUniversityContextPath = "%bind(:5)";
 	var linkList = window.parent.document.getElementsByTagName("link");//获取父窗口link标签对象列表
 	var head = document.getElementsByTagName("head").item(0);
 	//在子窗口中添加父窗口的外联样式
