--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -200,6 +200,7 @@ body, button, input, select, textarea {
 <script type="text/javascript" src="%bind(:13)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript" src="%bind(:13)/statics/js/tranzvision/func/captcha.js"></script>
 <script type="text/javascript">
+	var TzUniversityContextPath = "%bind(:13)";
 	var linkList = window.parent.document.getElementsByTagName("link");//获取父窗口link标签对象列表
 	var head = document.getElementsByTagName("head").item(0);
 	//在子窗口中添加父窗口的外联样式
