--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_PHO_HTML.html
@@ -346,7 +346,7 @@
 			<div class="photo_up">
 				<div class="main_inner_content_info_upload2" style="position:relative;">
 					<div id="photoupbt" class="photoupbt">%bind(:18)</div>
-                    <img id="tempimg" dynsrc="" src="/" style="display:none" />
+                    <img id="tempimg" dynsrc="" style="display:none" />
 					<!--form id="myupload" action="/ImaUploadServlet?sysfilename=" method="post" enctype="multipart/form-data"-->
 					<form id="myupload"
 						action="%bind(:20)/UpdWebServlet?filePath=zhglPhoto" method="post"
