--- a/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
+++ b/src/main/resources/html/TZWebsiteApplicationBundle/TZ_ONLINE_PAGE_HTML.html
@@ -182,7 +182,7 @@
 				function tabChange(op)
 				{
 					var tapno = $("#tabNav .tabNav_c").index();
-					console.log(tapno);
+					//console.log(tapno);
 					if(op=="next"){
 						tapno = tapno + 2;
 					}
