完善招生网站前台账户管理功能

--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_FILD_EN_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_SEX_FILD_EN_HTML.html
@@ -2,6 +2,6 @@
   	<div class="main_inner_right_line_left_user">%bind(:1):</div>
 	<div style="width:100%">
 		<label for="male"><input type="radio" name="%bind(:2)" class="radio_7" id="male" value="M" style="margin-left:7px;"/>Male</label>
-	  	<label for="fmale"><input type="radio" name="%bind(:2)" class="radio_7" id="female" value="F" />Female</label>
+	  	<label for="female"><input type="radio" name="%bind(:2)" class="radio_7" id="female" value="F" />Female</label>
 	</div>      
 </div>
