--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_MENU_ZHGL_HTML.html
@@ -2,57 +2,56 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <title></title>
 <link href="page_stylecss" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="%bind(:3)/statics/js/lib/jquery/jquery.min.js"></script> 
-<script type="text/javascript" src="%bind(:3)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
-
 <script type="text/javascript">
-	$(document).ready(function(){
-		$("#letf_menu").height(922);
-
-    });
+	//
+	var TzUniversityContextPath = "%bind(:1)";
+	//
+	var TZ_GD_LOGIN_SITEI_ORG_CODE = "%bind(:2)";
+	//
+	var TZ_GD_LOGIN_SITEI_ID = "%bind(:3)";
+	//
+	var TZ_GD_SITEI_ISD = "";
 </script>
-
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/lib/jquery/jquery.min.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/tranzvision/extjs/app/view/website/set/js/pagefunc.js"></script>
+<script type="text/javascript"
+	src="%bind(:1)/statics/js/website/account/init.js"></script>
 </head>
-<body style="background:#fff">
-<div id="headarea" class="top assdiv" area-add="false" area-edit="true" area-del="false"
-        area-copy="false" area-moveup="false" area-movedown="false" area-postion="H" area-type="YT" area-id="">
+<body style="background: #fff">
+	<div id="headarea" class="top assdiv" area-add="false" area-edit="true"
+		area-del="false" area-copy="false" area-moveup="false"
+		area-movedown="false" area-postion="H" area-type="YT" area-id="">
 
-</div>
+	</div>
 
-        <div id="main" class="main">
- <div id="letf_menu" class="main_left assdiv" 
-             area-add="false" area-edit="true" area-del="false" area-copy="false"
-            area-moveup="false" area-movedown="false" area-postion="L" area-type="ZC" area-id="">
-<div></div>
+	<div id="main" class="main">
+		<div id="letf_menu" class="main_left assdiv" area-add="false"
+			area-edit="true" area-del="false" area-copy="false"
+			area-moveup="false" area-movedown="false" area-postion="L"
+			area-type="ZC" area-id="">
+			<div></div>
 
-</div>
-	
-	    %bind(:2)
-
-</div>
-
-<div id="footarea" class="foot assdiv" area-add="false" area-edit="true" area-del="false"
-        area-copy="false" area-moveup="false" area-movedown="false" area-postion="F" area-type="YW" area-id="">
-</div>	
-
-	<div>
-            <input id="jgid" name="jgid" type="hidden"/>
-            <input id="siteid" name="siteid" type="hidden"/>
-            <input id="lang" name="lang" type="hidden"/>
 		</div>
 
-<script type="text/javascript">
-   $(document).ready(function(){
-		LoadHeader("","%bind(:1)","");
-		LoadMenu("","%bind(:1)","");
-		LoadFooter("","%bind(:1)","");
-		LoadWelcome("","%bind(:1)","");
+		%bind(:4)
 
-	});
-</script>
+	</div>
+
+	<div id="footarea" class="foot assdiv" area-add="false"
+		area-edit="true" area-del="false" area-copy="false"
+		area-moveup="false" area-movedown="false" area-postion="F"
+		area-type="YW" area-id=""></div>
+
+	<div>
+		<input id="jgid" name="jgid" type="hidden" /> <input id="siteid"
+			name="siteid" type="hidden" /> <input id="lang" name="lang"
+			type="hidden" />
+	</div>
 
 </body>
 </html>
