完善活动管理

--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_ONLINE_DISPLAY_HEAD.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>活动报名</title>
-<script type="text/javascript" src="/tranzvision/js/jquery.js"></script>
+<script type="text/javascript" src="%bind(:5)/statics/js/lib/jquery/jquery.min.js"></script>
 <script type="text/javascript">
 	var TzUniversityContextPath = "%bind(:5)";
 	var linkList = window.parent.document.getElementsByTagName("link");//获取父窗口link标签对象列表
