--- a/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
+++ b/src/main/resources/html/TZEventsBundle/TZ_APPLY_REG_FORM_HEAD.html
@@ -129,7 +129,7 @@ body, button, input, select, textarea {
 
 .apply-signin h4 {
 	color: #999;
-	font-weight: 100; //
+	font-weight: 100; 
 	margin: 5px 70px 20px 15px;
 	font-size: 12px;
 }
@@ -145,6 +145,8 @@ body, button, input, select, textarea {
 	width: 150px;
 	text-align: right;
 	margin-right: 20px;
+	height: 53px;
+	line-height:53px;
 }
 
 .apply-btn {
