--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_WJMM_EP_HTML.html
@@ -274,7 +274,7 @@
   
 					    <div class="main_full_line_right">
 					      <input name="Email_User" type="text" class="input_251px" id="Email_User" onblur="check_email(this.value)"/>
-					      <span id="userEmailStyle" class="alert_display_none"><img src="/tranzvision/images/alert.png" width="16" height="16" class="alert_img"  />
+					      <span id="userEmailStyle" class="alert_display_none"><img src="%bind(:5)/alert.png" width="16" height="16" class="alert_img"  />
 						  <label id="userEmail_status"></label></span>
 					    </div>
 					  </div>
