--- a/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHYX_EP_ENG_HTML.html
+++ b/src/main/resources/html/TZWebSiteRegisteBundle/TZ_GD_JHYX_EP_ENG_HTML.html
@@ -151,7 +151,7 @@
 		<div class="main_full">
 			<div class="main_full_line">
 		    	<div class="main_full_line_title_font_left">Activation Account <span  class="font_gray_14px_dark">Only can activate the mailbox account</span></div>
-		    	<div class="main_full_full_right"><a href="/%bind(:2)/login.html" class="blue_">&nbsp;&nbsp;&nbsp;back</a></div>
+		    	<div class="main_full_full_right"><a href="%bind(:5)/user/login/%bind(:7)" class="blue_">&nbsp;&nbsp;&nbsp;back</a></div>
 		  	</div>
 		  	<div class="main_full_lines_720px"></div>
 
